--- a/frontend/web/.htaccess
+++ b/frontend/web/.htaccess
@@ -17,8 +17,8 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # otherwise forward it to index.php
 RewriteRule . index.php
 
-RewriteCond %{HTTP_HOST} ^www.da-info.pro$ [NC]
-RewriteRule ^(.*)$ https://da-info.pro/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} ^www.testyii.gq/$ [NC]
+RewriteRule ^(.*)$ https://testyii.gq//$1 [R=301,L]
 
 RewriteCond %{HTTPS} on
-RewriteRule ^(.*)$ https://da-info.pro/$1 [R=301,L]
+RewriteRule ^(.*)$ https://testyii.gq//$1 [R=301,L]
